# octos

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README-zh.md  README.md  RELEASE.md  SELF_HOSTED_RUNNERS.txt  typos.toml
.github/workflows/: build-linux.yml  ci-self-hosted.yml  ci.yml  release-dispatch.yml  release.yml
book-zh/public/: 404.html  advanced.html  architecture.html  channels.html  cli-reference.html  configuration.html  installation.html  introduction.html  memory-skills.html  operations.html  print.html  providers.html  quickstart.html  searcher-c2a407aa.js  searchindex-546dfab1.js  skill-development.html  testing.html  toc-dd287637.js  toc.html  troubleshooting.html
book-zh/src/: advanced.md  architecture.md  introduction.md  memory-skills.md  providers.md
book/src/: introduction.md
crates/app-skills/account-manager/: SKILL.md
crates/app-skills/skill-evolve/: SKILL.md  manifest.json
crates/app-skills/time/: Cargo.toml
crates/app-skills/weather/: Cargo.toml  manifest.json
crates/crew-agent/: Cargo.toml
crates/crew-agent/src/: agent.rs  bootstrap.rs  builtin_skills.rs  bundled_app_skills.rs  exec_env.rs  lib.rs  loop_detect.rs  mcp.rs  progress.rs  sandbox.rs  skills.rs
crates/crew-agent/tests/: security_sandbox.rs  site_crawl.rs  test_hn_fetch.rs  test_news_fetch.rs
crates/crew-bus/: Cargo.toml
crates/crew-bus/src/: bus.rs  channel.rs  coalesce.rs  cron_service.rs  cron_types.rs  discord_channel.rs  email_channel.rs  feishu_channel.rs  lib.rs  session.rs  telegram_channel.rs  wecom_bot_channel.rs  wecom_channel.rs  wecom_crypto.rs  whatsapp_channel.rs
crates/crew-cli/: Cargo.toml  build.rs
crates/crew-cli/src/: compaction.rs  config.rs  config_watcher.rs  cron_tool.rs  gateway_dispatcher.rs  main.rs  monitor.rs  otp.rs  persona_service.rs  process_manager.rs  profiles.rs  session_actor.rs  status_indicator.rs  status_layers.rs  stream_reporter.rs  updater.rs
crates/crew-cli/src/api/: admin.rs  auth_handlers.rs  mod.rs  router.rs  static_files.rs  user_admin.rs  webhook_proxy.rs
crates/crew-cli/src/auth/: mod.rs  oauth.rs  store.rs
crates/crew-cli/src/commands/: account.rs  auth.rs  chat.rs  cron.rs  gateway.rs  mod.rs  office.rs  serve.rs  skills.rs
crates/crew-cli/src/commands/gateway/: account_handler.rs  mod.rs
crates/crew-cli/src/prompts/: admin_default.txt  gateway_default.txt
crates/crew-cli/static/admin/: index.html
crates/crew-cli/static/admin/assets/: index-3Jc0c9wp.css  index-B7iN3zQy.js  index-BJN2Eip8.js  index-CnTHHN3L.js  index-CzY3I9Wx.js  index-D8--QyP_.css  index-DA4Ittxb.js  index-yBqAMPNZ.css
crates/crew-cli/tests/: ux_integration.rs
crates/crew-core/src/: error.rs  types.rs  utils.rs
crates/crew-llm/: Cargo.toml
crates/crew-llm/src/: adaptive.rs  anthropic.rs  catalog.rs  config.rs  context.rs  error.rs  gemini.rs  high_level.rs  lib.rs  middleware.rs  ominix.rs  openai.rs  openrouter.rs  provider.rs  retry.rs  router.rs  sse.rs  swappable.rs  types.rs
crates/crew-llm/tests/: ux_adaptive.rs
crates/crew-memory/src/: hybrid_search.rs
crates/crew-pipeline/src/: condition.rs  discovery.rs  executor.rs  fidelity.rs  graph.rs  handler.rs  human_gate.rs  lib.rs  manager.rs  parser.rs  server.rs  thread.rs  tool.rs
crates/crew-plugin/examples/: validate_skills.rs
crates/crew-plugin/src/: lib.rs
crates/octos-agent/examples/: inspection_safety.rs  realtime_heartbeat.rs
crates/octos-agent/src/: bundled_app_skills.rs  hooks.rs  lib.rs  permissions.rs  recorder.rs  sandbox.rs  task_supervisor.rs  workspace_contract.rs  workspace_git.rs  workspace_policy.rs
crates/octos-bus/src/: api_channel.rs  channel.rs  session.rs  wecom_bot_channel.rs
crates/octos-cli/: Cargo.toml
crates/octos-cli/src/: config.rs  content_catalog.rs  main.rs  otp.rs  process_manager.rs  profiles.rs  session_actor.rs  stream_reporter.rs  tenant.rs
crates/octos-cli/static/: landing.html
crates/octos-cli/tests/: cli_tests.rs
crates/octos-dora-mcp/: Cargo.toml
crates/octos-dora-mcp/src/: bridge.rs  config.rs  lib.rs  pipeline.rs
crates/octos-llm/src/: context.rs  fallback.rs  openrouter.rs  provider.rs  router.rs
crates/octos-memory/src/: hybrid_search.rs  store.rs
crates/octos-plugin/: Cargo.toml
crates/platform-skills/asr/: Cargo.toml  SKILL.md  manifest.json
crates/platform-skills/asr/src/: main.rs
dashboard/: tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  providers.json  types.ts
docs/: ARCHITECTURE.md  AUDIT_2026-02-14.md  CONFIG_ARCHITECTURE.md  FEATURE_PARITY_VS_MOLTIS.md  IMESSAGE_EVALUATION.md  LARKSUITE_INTEGRATION.md  OCTOS_HARNESS_M4_WORKSTREAMS_2026-04-21.md  PRD.md  SECURITY_ARCHITECTURE.md  SESSION_SWITCHING.md  USER_MANUAL.md  user-guide-zh.md  user-guide.md
e2e/tests/: coding-hardcases.spec.ts  tool-use-regression.spec.ts  web-client.spec.ts
examples/dora-bridge-config/: README.md  inspection_mission.dot
examples/slam-nav-sim/: .gitignore  README.md  dataflow_nav_sim.yaml  dataflow_nav_sim_py.yaml  dataflow_octos_replan.yaml  nav_tool_map.json  start.sh
scripts/: ci.sh  cloud-host-deploy.sh  deploy.sh  install.ps1  install.sh  octos-doctor.sh  purge-tenant.sh  setup-frpc.sh  setup-github-runner.sh  test-cloud-host-deploy.sh  ux-test.sh
scripts/frp/: bootstrap-tenant.sh  setup-caddy.sh  setup-frpc.sh
(+129 files in other folders)
