[workspace]
resolver = "2"
members = [
    "crates/crew-core",
    "crates/crew-memory",
    "crates/crew-llm",
    "crates/crew-agent",
    "crates/crew-bus",
    "crates/crew-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["crew-rs team"]
license = "Apache-2.0"
repository = "https://github.com/heyong4725/crew-rs"

[workspace.dependencies]
# Internal crates
crew-core = { path = "crates/crew-core" }
crew-memory = { path = "crates/crew-memory" }
crew-llm = { path = "crates/crew-llm" }
crew-agent = { path = "crates/crew-agent" }
crew-bus = { path = "crates/crew-bus" }

# codex-rs crates (reused)
codex-execpolicy = { git = "https://github.com/openai/codex", path = "codex-rs/execpolicy" }
codex-state = { git = "https://github.com/openai/codex", path = "codex-rs/state" }
codex-file-search = { git = "https://github.com/openai/codex", path = "codex-rs/file-search" }
codex-linux-sandbox = { git = "https://github.com/openai/codex", path = "codex-rs/linux-sandbox" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (dora-rs pattern)
eyre = "0.6"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
dirs = "5"

# HTTP client (using rustls for pure Rust, no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Database (pure Rust)
redb = "2"

# File search
glob = "0.3"
regex = "1"
ignore = "0.4"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# Async utilities
futures = "0.3"

# Channel integrations (optional, pulled in via feature flags)
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "gateway", "client", "http", "model"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
