[package]
name = "asr"
version = "1.0.0"
edition = "2021"
description = "ASR/TTS skill binary using ominix-api (Qwen3 models on Apple Silicon)"
authors = ["hagency"]

[[bin]]
name = "asr"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json", "multipart"], default-features = false }
